--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
 </head>
 <body>
     <header>
-        <h1>Calcule Sua Conta de Luz</h1>
+        <div id="logo">
+            <picture>
+                <img src="Imagens/Enel.png" alt="Logo da Enel">
+            </picture>
+        </div>
     </header>
 
     <main>
@@ -48,7 +52,7 @@
 
         <p>Kwh Gasta: <input type="text" name="kwh" id="kwh"></p>
 
-        <p><input type="button" value="Calcular" id="botao" onclick="calcular()"></p>
+        <p><input type="button" value="Calcular" id="botao"  onclick="calcular()"></p>
     </main>
 
     <script src="JS/script.js"></script>
