--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="Icone/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="Estilo/style.css">
-    <title>Cálculo da Conta de Luz</title>
+    <title>Conta de Luz</title>
 </head>
 <body>
     <header>
@@ -18,7 +18,7 @@
     </header>
 
     <main>
-        <h2>Opções</h2>
+        <h1>Opções</h1>
         <ul>
             <li>
                 <input type="radio" name="cliente" id="residencial" checked>
@@ -47,7 +47,7 @@
         </ul>
 
         <div id="resultado">
-            
+
         </div>
 
         <p>Kwh Gasta: <input type="text" name="kwh" id="kwh"></p>
