--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
             <li>
 
-                <input type="radio" name="cliente" id="residencial" checked>
+                <input type="radio" name="cliente" id="residencial">
                 <label for="residencial">Residencial</label>
 
             </li>
