--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="Icone/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="icone/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
     <title>Cálculo da Conta de Luz</title>
 </head>
@@ -14,7 +14,7 @@
 
         <div class="logo">
 
-            <picture><img src="Imagens/Enel.png" alt="Logo da Enel"></picture>
+            <picture><img src="imagens/Enel.png" alt="Logo da Enel"></picture>
 
         </div>
 
